[package]
name = "rust_blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
diesel = { version = "2.0.0", features = ["postgres", "r2d2"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
r2d2 = "0.8.10"
actix-web = "4.2.1"
env_logger = "0.9.0"
log = "0.4.17"
